--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "aws-amplify": "^3.3.10",
     "express": "^4.17.1"
   },
   "devDependencies": {},
